<!-- Login Form -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/splashImgView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/spalsh_logo" />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_textfield"
        android:hint="@string/hint_username"
        android:singleLine="true"
        android:textAppearance="@style/LableTextStyleWhite"
        android:textColor="@color/COLOR_WHITE" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_loginbtn"
        android:text="@string/login_txt"
        android:textColor="@color/COLOR_BLACK" />

    <Button
        android:id="@+id/btn_fblogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_facebook"
        android:text="@string/fb_login_txt"
        android:textAppearance="@style/LblTextStyle"
        android:textColor="@color/COLOR_WHITE" />

    <Button
        android:id="@+id/btn_googlelogin"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/login_google"
        android:contentDescription="@string/app_name"
        android:text="@string/plus_login_txt"
        android:textAppearance="@style/LblTextStyle"
        android:textColor="@color/COLOR_WHITE" />

</LinearLayout>