<!-- Login Form -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
 <RelativeLayout
      android:layout_width="fill_parent"
        android:layout_height="168dp">
    <RelativeLayout
        android:id="@+id/menu_button"
        android:layout_width="fill_parent"
        android:layout_height="165dp"
        android:layout_gravity="top"
        android:background="@drawable/home_yellowrowbg" >

        <TextView
            android:id="@+id/menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="33dp"
            android:gravity="left|center_vertical"
            android:text="@string/menu"
            android:textAppearance="@style/MenuTextStyle" />

        <TextView
            android:id="@+id/menu_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/menu"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:gravity="left|center_vertical"
            android:text="@string/menu_subtitle"
            android:textAppearance="@style/VeryLargeTextStyle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/myorder"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/menu_button"
        android:gravity="left|center_vertical"
      
         >

        <TextView
            android:id="@+id/myorder_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/myorder"
            android:textAppearance="@style/MenuItemStyle" />

        <TextView
            android:id="@+id/myorder_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myorder_title"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/myorder_subtitle"
            android:textAppearance="@style/MenusubItemStyle" />
    </RelativeLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_below="@id/myorder"
        android:background="#FF909090" />

    <RelativeLayout
        android:id="@+id/need"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/line1"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/need_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/need"
            android:textAppearance="@style/MenuItemStyle" />

        <TextView
            android:id="@+id/need_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/need_title"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/need_subtitle"
            android:textAppearance="@style/MenusubItemStyle" />
    </RelativeLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_below="@id/need"
        android:background="#FF909090" />

    <RelativeLayout
        android:id="@+id/time"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/line2"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/time_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textAppearance="@style/MenuItemStyle" />

        <TextView
            android:id="@+id/time_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_title"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/time_subtitle"
            android:textAppearance="@style/MenusubItemStyle" />
    </RelativeLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_below="@id/time"
        android:background="#FF909090" />

    <RelativeLayout
        android:id="@+id/rewards"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/line3"
        android:gravity="left|center_vertical" >

        <TextView
            android:id="@+id/rewards_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/rewards"
            android:textAppearance="@style/MenuItemStyle" />

        <TextView
            android:id="@+id/rewards_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rewards_title"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/rewards_subtitle"
            android:textAppearance="@style/MenusubItemStyle" />
    </RelativeLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_below="@id/rewards"
        android:background="#FF909090" />

    <RelativeLayout
        android:id="@+id/feedback"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@id/line4"
        android:gravity="left|center_vertical" >
 
        
        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/feedback"
            android:textAppearance="@style/MenuItemStyle" />

        <TextView
            android:id="@+id/feedback_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_title"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="20dp"
            android:text="@string/feedback_subtitle"
            android:textAppearance="@style/MenusubItemStyle" />
    </RelativeLayout>
  </RelativeLayout>
</ScrollView>